--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-emoji": "^0.5.0",
     "react-icons": "^4.7.1",
